--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <li>
             <ol>  <a href="./01HTML/principal.html">Práctica 1</a>  </ol>
         </li>
+
+        <li>
+            <ol>  <a href="./01HTML/curriculum.html">tarea</a>  </ol>
+        </li>
     </div>
 </body>
 </html>
