--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
             el nombre es real.]
         </p>
         <br>
+    
         <li>
-            <ol>  <a href="./01HTML/principal.html">Práctica 1</a>  </ol>
+              <a href="./01HTML/curriculum.html">Curriculum</a>  
         </li>
+        <br>
+        <li>
+            <a href="./01HTML/principal.html">primer practica</a>  
+      </li>
+<br>
 
         <li>
-            <ol>  <a href="./01HTML/curriculum.html">tarea</a>  </ol>
-        </li>
+            <a href="./02Formulario/formulario.html">Segunda practica</a>  
+      </li>
     </div>
 </body>
 </html>
