Formulario de Registro

--- a/02Formulario/formulario.html
+++ b/02Formulario/formulario.html
@@ -4,30 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario</title>
     <link rel="stylesheet" href="./css/stylelogin.css">
 </head>
 <body>
-    <div class = "userlogin">
-        <div class = "title">
-            <h1>Bienvenidos al Registro de Ádios a la Vida</h1>
+    <section class="register">
+        <div class="titulo">
+        <h4>Bienvenidos al registro de adios a la vida</h4>
         </div>
-        <div class = "userid">
-            <h1>Nombre de Usuario:</h1>
-            <input type="email" name = "correo" id = "email" 
-            class = "input_user">
+        <div class="text">
+            Ingrese su nombre:
         </div>
-        <div class = "userpassword">
-            <h1>Ingresa la Contraseña:</h1>
-            <input type="password" name = "pass" id = "password" 
-            class = "input_pass">
-        </div>
-        <a href="#">¿Olvidaste tu Contraseña?</a>
+
+        <br>
+
+        <input class="control" type="text" name="nombre" id="nombre" >
+
+        <br>
+        <br>
+        <br>
+
+       <div  class="text">
+        Ingrese su contraseña:
+    </div>
+
+    <br>
+        <input class="control" type="password" name="nombre" id="nombre" >
+        
+        <p>¿Olvidaste la contraseña?<a href="#"></a></p>
         <div class = "buttons">
             <button> <img src="" alt=""> <p>Facebook</p> </button>
             <button> <img src="" alt=""> <p>Google</p> </button>
         </div>
 
-    </div>
+
+        <p><a href="formregistro.html">Registrarse</a></p>
+
+
+    </section>
 </body>
 </html>
