--- a/index.html
+++ b/index.html
@@ -5,24 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Primera Página</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
-    <div class = "container">
-        <p>
+    <div class = "container" align="center">
+        <p >
             Esta es mi primera página donde estarán todas las prácticas de:
-        </p>
-        <h1>Aguilar Dominguez Jonathan</h1>
-        <p>Como tarea: deberan de crear un apartado donde aparezaca su 
-            curriculu, abarcando:
-            <br>
-            Skills(habilidades [blandas/duras])
-            Experiencias
-            Datos Generales [Ficticios los personales, solo 
-            el nombre es real.]
-        </p>
-        <br>
-    
+        </p >
+        <h1  >Aguilar Dominguez Jonathan</h1>
+  
         <li>
               <a href="./01HTML/curriculum.html">Curriculum</a>  
         </li>
