formulario de registro terminado

--- a/02Formulario/formregistro.html
+++ b/02Formulario/formregistro.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./css/stilo.css">
 </head>
 <body>
+    <ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../01HTML/principal.html">practica 1</a></li>
+        <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+    </ul>
     <section class="register">
         <div class="titulo">
             <h4>Formulario de registro</h4>
@@ -32,16 +38,17 @@
 <input class="control" type="text" name="apmat" id="materno" >
 <br>
 <div  class="text">
-    Ingrese su contraseña:
+    Ingrese una contraseña:
 </div>
 
     <input class="control" type="password" name="nombre" id="nombre" >
     <br>
 <div  class="text">
-    confirme su contraseña:
+    confirme la contraseña:
 </div>
 
     <input class="control" type="password" name="nombre" id="nombre" >
     <input class="botons" type="submit" value="Registrarse">
+    <p><a href="formulario.html">Regresar</a></p>
 </body>
 </html>
