--- a/02Formulario/formulario.html
+++ b/02Formulario/formulario.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/stylelogin.css">
 </head>
 <body>
+    <ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../01HTML/principal.html">practica 1</a></li>
+        <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+
+
+
+
+    </ul>
     <section class="register">
         <div class="titulo">
         <h4>Bienvenidos al registro de adios a la vida</h4>
@@ -30,11 +40,11 @@
 
     <br>
         <input class="control" type="password" name="nombre" id="nombre" >
-        
+
         <p>¿Olvidaste la contraseña?<a href="#"></a></p>
         <div class = "buttons">
-            <button> <img src="" alt=""> <p>Facebook</p> </button>
-            <button> <img src="" alt=""> <p>Google</p> </button>
+            <button> <img src="fb.png" alt=""> <p>Facebook</p> </button>
+            <button> <img src="go.png" alt=""> <p>Google</p> </button>
         </div>
 
 
