--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
+
+    <ul class="menu">
+
+        <li><a href="./index.html">Inicio</a></li>
+        <li><a href="./01HTML/principal.html">practica 1</a></li>
+        <li><a href="./02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="./01HTML/curriculum.html">Curriculum</a></li>
+    </ul>
+
     <div class = "container" align="center">
         <p >
             Esta es mi primera página donde estarán todas las prácticas de:
         </p >
         <h1  >Aguilar Dominguez Jonathan</h1>
   
-        <li>
-              <a href="./01HTML/curriculum.html">Curriculum</a>  
-        </li>
-        <br>
-        <li>
-            <a href="./01HTML/principal.html">primer practica</a>  
-      </li>
-<br>
-
-        <li>
-            <a href="./02Formulario/formulario.html">Segunda practica</a>  
-      </li>
     </div>
 </body>
 </html>
