--- a/01HTML/curriculum.html
+++ b/01HTML/curriculum.html
@@ -10,7 +10,7 @@
 <body>
     <div class="name">
         <div class="img">
-            <img src="mi_foto.jpg">
+            <img src="imagenes/mi_foto.jpg">
         </div>
         <div class="content">
             <p class="p-1">Aguilar Dominguez Jonthan</p>
