--- a/02Formulario/formulario.html
+++ b/02Formulario/formulario.html
@@ -13,10 +13,6 @@
         <li><a href="../01HTML/principal.html">practica 1</a></li>
         <li><a href="../02Formulario/formulario.html">practica 2</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
-
-
-
-
     </ul>
     <section class="register">
         <div class="titulo">
@@ -32,19 +28,25 @@
 
         <br>
         <br>
-        <br>
+      
 
        <div  class="text">
         Ingrese su contraseña:
     </div>
-
+   
     <br>
         <input class="control" type="password" name="nombre" id="nombre" >
-
-        <p>¿Olvidaste la contraseña?<a href="#"></a></p>
+           <br>
+           <br>
+           <div>
+          <center><a class = "btn" href="iniciosesion.html" target="_blank" >Iniciar sesión</a></center> 
+        </div>
+           <br>
+           <br>
+        <p><a href="recuperarcon.html">¿Olvidaste la contraseña?</a></p>
         <div class = "buttons">
-            <button> <img src="fb.png" alt=""> <p>Facebook</p> </button>
-            <button> <img src="go.png" alt=""> <p>Google</p> </button>
+            <a></a><button> <img src="fb.png"> <a href="https://es-la.facebook.com/"><p>Facebook</p> </button></a>
+           <a><button> <img src="go.png" > <a href="https://accounts.google.com/"><p>Google</p> </button></a> 
         </div>
 
 
