corrección de contraseña

--- a/02Formulario/contraseña.html
+++ b/02Formulario/contraseña.html
@@ -18,7 +18,7 @@
 
     <section class="register">
         <div class="titulo">
-        <h4>Se ha iniciado sesión correctamente</h4>
+        <h4>Se ha enviado la contraseña al correo ingresado</h4>
         </div>
 
         <center><img src="./imagenes/palomita.png" alt=""></center>
