agregue apartado de regresar

--- a/02Formulario/registrofin.html
+++ b/02Formulario/registrofin.html
@@ -21,6 +21,7 @@
         </div>
 
         <center><img src="./imagenes/palomita.png" alt=""></center>
+        <p><a href="formulario.html">Regresar</a></p>
 <br>
     
 </body>
