formulario con js

--- a/02Formulario/formulario.html
+++ b/02Formulario/formulario.html
@@ -12,6 +12,7 @@
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="../01HTML/principal.html">practica 1</a></li>
         <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
     </ul>
     <section class="register">
