--- a/03Registro/formularioregistro.html
+++ b/03Registro/formularioregistro.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
+
+    <ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../01HTML/principal.html">practica 1</a></li>
+        <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
+        <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+    </ul>
+    
     <div class = "container">
         <form class="form" action="">
             <p class="titulo">Registrate</p>
