--- a/03Registro/formularioregistro.html
+++ b/03Registro/formularioregistro.html
@@ -25,12 +25,12 @@
             <p class="mensajeError"></p>
           </div>
           <div class="form-input edad">
-            <input type="number" id="edad">
-            <label for="edad">Edad</label>
+            <input type="number" id="edad" min= "1" max="99">
+            <label for="edad">Edad</label
             <p class="mensajeError"></p>
           </div>
           <div class="form-input nacimiento">
-            <input type="number" id="nacimiento" min="1950-01-01" max="2023-12-31">
+            <input type="date" id="nacimiento" min="1950-01-01" max="2023-12-31">
             <label for="nacimiento">Fecha de nacimiento</label>
             <p class="mensajeError"></p>
           </div>
