--- a/02Formulario/iniciosesion.html
+++ b/02Formulario/iniciosesion.html
@@ -14,6 +14,7 @@
         <li><a href="../01HTML/principal.html">practica 1</a></li>
         <li><a href="../02Formulario/formulario.html">practica 2</a></li>
         <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
+        <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
     </ul>
 
