--- a/04Ejercicios/principal.html
+++ b/04Ejercicios/principal.html
@@ -179,7 +179,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><input class="b"type="button" name = "calif" value = "Calificación" onclick = "return calif()"></td>
+                        <td><input class="b"type="button" name = "calif" value = "Calificación" onclick = "return califi()"></td>
                     </tr>
                     <tr>
                         <td>La Calificación Final es: </td>
