--- a/Examen/examen.html
+++ b/Examen/examen.html
@@ -8,6 +8,16 @@
     <title>Examen</title>
 </head>
 <body>
+	<ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../01HTML/principal.html">practica 1</a></li>
+        <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
+        <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
+        <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+		<li><a href="./examen.html">Examen</a></li>
+    </ul>
+
 	<center><h1>Banco Nataaoki</h1></center>
 	<div class="tablacontainer">
         <form method="get" id="tabdelete" action=" " >
