--- a/Examen/examen.html
+++ b/Examen/examen.html
@@ -15,10 +15,17 @@
         <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
         <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
-		<li><a href="./examen.html">Examen</a></li>
+		<li><a href="../Examen/examen.html">Examen</a></li>
     </ul>
-
-	<center><h1>Banco Nataaoki</h1></center>
+		<br>
+		<br>
+		<br>
+		<div class="titi">
+	<center><h1>Banco Blonde</h1></center>
+	</div>
+	<br>
+		<br>
+		<br> 
 	<div class="tablacontainer">
         <form method="get" id="tabdelete" action=" " >
 			<h2 class="titulo">calculadora de interes Compuesto</h2>
@@ -34,8 +41,8 @@
 						<td> <h1><input type="number" id="interes" name="interes" min="1" max="60" value="0" class="interes"></h1> </td>
                     </tr>
                     <tr class="plazo">
-                        <td class="plazo">Plazo(Años)</td>
-						<td> <h1><input type="number" id="plazo" name="plazo" min="1" max="20" value="0" class="plazo" min="01" max="999"></h1></td>
+                        <td class="plazo">Plazo (Años):</td>
+						<td> <h1><input type="number" id="plazo" name="plazo" min="1" max="20" value="0" class="plazo"></h1></td>
                     </tr>
                 </table>
 			<br>
@@ -47,8 +54,11 @@
         </form>
 		<br> <br>
 		</div>
+		<br>
+		<br>
 		<div class="tablaamortizacion" id="myform">
-			 <h1><b><center>Tabla de Interés compuesto</center></b></h1>
+			 <h1><b><center>Tabla de amortización</center></b></h1>
+			 <br>
 			 <center>
 			  <table id="tableData">	
 				<thead>  
@@ -56,7 +66,7 @@
 				<td><b>No. Pago Mensual</b></td>
 				<td><b>Cuota</b></td>
 				<td><b>Interés</b></td>
-				<td><b>Abono a capital</b></td>
+				<td><b>Abono de capital</b></td>
 				<td><b>Saldo inicial</b></td>
 				<td><b>Saldo final</b></td>
 			   </tr>
