--- a/02Formulario/formulario.html
+++ b/02Formulario/formulario.html
@@ -15,6 +15,7 @@
         <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
         <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+        <li><a href="../Examen/examen.html">Examen</a></li>
     </ul>
     <section class="register">
         <div class="titulo">
