--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="./03Registro/formularioregistro.html">Practica 3</a></li>
         <li><a href="./04Ejercicios/principal.html">Problemas JS</a></li>
         <li><a href="./01HTML/curriculum.html">Curriculum</a></li>
-        <li><a href="../Examen/examen.html">Examen</a></li>
+        <li><a href="./Examen/examen.html">Examen</a></li>
     </ul>
 
     <div class = "container" align="center">
