--- a/Examen/examen.html
+++ b/Examen/examen.html
@@ -32,16 +32,16 @@
             <br>
             <div>
                 <table id="tabla" class="tablai">
-                    <tr class="prestamo">
-                        <td class="prestamo">Cantidad del préstamo:</td> 
+                    <tr class="form-input">
+                        <td class="form-input">Cantidad del préstamo: $</td> 
                         <td> <h1><input type="text"   id="prestamo" name="prestamo" onkeypress="return validarn(event)" class="prestamo" min="01" max="3000000"></h1> </td>
                     </tr>
-                    <tr class="interes">
-                        <td class="interes"> Tasa de interés anual:</td>
+                    <tr class="form-input">
+                        <td class="form-input"> Tasa de interés anual: %</td> 
 						<td> <h1><input type="number" id="interes" name="interes" min="1" max="60" value="0" class="interes"></h1> </td>
                     </tr>
-                    <tr class="plazo">
-                        <td class="plazo">Plazo (Años):</td>
+                    <tr class="form-input">
+                        <td class="form-input">Plazo (Años): </td>
 						<td> <h1><input type="number" id="plazo" name="plazo" min="1" max="20" value="0" class="plazo"></h1></td>
                     </tr>
                 </table>
