--- a/05algoritmia/principal.html
+++ b/05algoritmia/principal.html
@@ -9,6 +9,18 @@
     
 </head>
 <body>
+
+    <ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../01HTML/principal.html">practica 1</a></li>
+        <li><a href="../02Formulario/formulario.html">practica 2</a></li>
+        <li><a href="../03Registro/formularioregistro.html">Practica 3</a></li>
+        <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
+        <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
+        <li><a href="../Examen/examen.html">Examen</a></li>
+    </ul>
+
+
     <div class = "container">
         <div class = "problema-container">
             <h2 class = "problema-title">Problema 1</h2>
