--- a/05algoritmia/principal.html
+++ b/05algoritmia/principal.html
@@ -18,6 +18,7 @@
         <li><a href="../04Ejercicios/principal.html">Problemas JS</a></li>
         <li><a href="../01HTML/curriculum.html">Curriculum</a></li>
         <li><a href="../Examen/examen.html">Examen</a></li>
+        <li><a href="../05algoritmia/principal.html">Examen</a></li>
     </ul>
 
 
