--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="./01HTML/curriculum.html">Curriculum</a></li>
         <li><a href="./Examen/examen.html">Examen</a></li>
         <li><a href="./05algoritmia/principal.html">Algortimia</a></li>
+        <li><a href="./juego/principal.html">Juego</a></li>
     </ul>
 
     <div class = "container" align="center">
